objects/Postessupplementaire__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Postes_actuelles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Debut__c</fullName>
        <label>Début</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Societe__c</fullName>
        <label>Société</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Postesactuelles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Poste supplémentaire</label>
    <nameField>
        <label>Nom de Postes actuelles</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postes supplémentaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>